# tornado-poc

./: .gitignore  Makefile  README.md  deploy  tornado-poc
cnf/env/: dev.env.json
lib/bash/funcs/: load-functions.sh  read-cmd-args.sh  run-actions.sh  use_python_venv.sh
src/bash/deploy/: run.sh
src/bash/deploy/ubuntu/: run.lst  run.sh
src/bash/deploy/ubuntu/ubuntu-20.04.2-lts/: check-install-docker.func.sh  check-install-docker.lst  check-install-os-packages.func.sh  check-install-os-packages.lst  check-install-poetry-proj.func.sh  check-install-python-for-sat.func.sh  check-install-python-for-sat.lst  check-install-python-modules.lst  check-install-python-modules.no-binary-requirements.txt  check-setup-bash.func.sh  print-usage.func.sh  run.def.sat  setup-docker.func.sh  setup-git.func.sh  setup-hostname.func.sh  setup-python-env-file.func.sh  setup-sync-time.func.sh
src/bash/tornado-poc/: tornado-poc.lst  tornado-poc.sh
src/bash/tornado-poc/funcs/: morph-dir.func.sh  print-usage.func.sh  run-hello-world.func.sh  run-pylint-in-python-files.func.sh  run-python-tests.func.sh
src/docker/devops/: Dockerfile
src/python/tornado-poc/: pyproject.toml
src/python/tornado-poc/src/hello_world/: app.py
