[tool.poetry]
name = "tornado-poc"
version = "1.0.0"
description = "A proof of concept of the Python framework Tornado."
authors = ["Bruno Araujo <araujo.contato@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tornado = "^6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"
pylint = "^2.8.3"

[tool.poetry.scripts]
start = "src.hello_world.app:start_server"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
